# mondeq-quant

./: .gitignore  README.md  pyproject.toml
checkpoints/: experiment_results.json  mnist_mondeq_float.pt
experiments/: alpha_sweep.py  backward_shifted_norm.py  common.py  compare_fp_displacement_decaying.py  conv_forward.py  displacement_validation.py  eval_rates.py  fb_vs_pr.py  fixed_point_displacement.py  forward_alpha_sweep.py  iterate_quantisation.py  margin_stability_certificate.py  phase_diagram.py  qat_vs_ptq.py  regenerate_figures.py  safe_region_vs_bitdepth.py  safe_window_vs_bits.py  splitting_comparison.py  tightness_bisection.py  train_and_quantise.py  utils.py
mondeq/: __init__.py  operators.py  prox.py  quant.py  splitting.py
mondeq/layers/: fc.py
mondeq/logging/: spectra.py
mondeq/operators/: __init__.py  conv.py  linear.py  wk_param.py
mondeq/quant/: fake.py
mondeq/solvers/: fb.py  pr.py
mondeq/utils/: power.py
scripts/: bootstrap_env.sh
src/models/: __init__.py  mnist_mondeq.py  quant_wrapper.py
src/mondeq/: __init__.py  operators.py  quant.py  splitting.py
src/mondeq/layers/: __init__.py  fc.py
src/training/: __init__.py  evaluate.py  train_mnist.py  train_qat.py
src/utils/: __init__.py  splitting_stats.py
tests/: test_fc_mon_backward.py  test_fc_mon_forward.py  test_mon_suite.py  test_operators_linear.py  test_solvers_fb.py
