[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mondeq-quant"
version = "0.0.2"
description = "Fully-connected MON (Winston–Kolter style) with prox-based FB equilibrium and implicit backward; optional experiment extras."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "James Li" }]

# Core runtime deps for the refactored package (no experiments).
dependencies = [
  "torch==2.8.0",
]

[project.optional-dependencies]
# Keep plotting/sweeps/etc. here. Install with: pip install .[experiments]
experiments = [
  "numpy==2.3.*",
  "scipy==1.16.2",
  "matplotlib==3.10.6",
  "tqdm==4.67.*",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "einops==0.8.1",
]
vision = [
  "torchvision==0.23.0",
]
dev = [
  "pytest==8.4.2",
  "mypy==1.18.1",
  "ruff==0.14.0",
  "types-tqdm",
  "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/JLi-Projects/mondeq-quant"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","SIM","PL","RUF"]

[tool.hatch.build.targets.wheel]
packages = ["mondeq"]

[tool.hatch.build.targets.sdist]
include = [
  "mondeq",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
