[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mondeq"
version = "0.1.0"
description = "Quantisation of Monotone Operator Deep Equilibrium Networks"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mondeq*", "models*", "training*", "utils*"]
